# franka_cbf_safety_filter

./: CMakeLists.txt  README.md  cbf_safety_filter.xml  package.xml
config/: cbf_controllers.yaml  scenario_0.yaml  scenario_1.yaml  scenario_10.yaml  scenario_11.yaml  scenario_12.yaml  scenario_2.yaml  scenario_3.yaml  scenario_4.yaml  scenario_5.yaml  scenario_6.yaml  scenario_7.yaml  scenario_8.yaml  scenario_9.yaml
config/generated_scenarios/: scenario_0000.yaml  scenario_0001.yaml  scenario_0002.yaml  scenario_0003.yaml  scenario_0004.yaml  scenario_0005.yaml  scenario_0006.yaml  scenario_0007.yaml  scenario_0008.yaml  scenario_0009.yaml  scenario_0010.yaml  scenario_0011.yaml  scenario_0012.yaml  scenario_0013.yaml  scenario_0014.yaml  scenario_0015.yaml  scenario_0016.yaml  scenario_0017.yaml  scenario_0018.yaml  scenario_0019.yaml  scenario_0020.yaml  scenario_0021.yaml  scenario_0022.yaml  scenario_0023.yaml  scenario_0024.yaml  scenario_0025.yaml  scenario_0026.yaml  scenario_0027.yaml  scenario_0028.yaml  scenario_0029.yaml  scenario_0030.yaml  scenario_0031.yaml  scenario_0032.yaml  scenario_0033.yaml  scenario_0034.yaml  scenario_0035.yaml  scenario_0036.yaml  scenario_0037.yaml  scenario_0038.yaml  scenario_0039.yaml  (+960 more)
include/cbf_safety_filter/: joint_position_controller.hpp  joint_position_example_controller.hpp  joint_velocity_controller.hpp  joint_velocity_example_controller.hpp
include/urdf/: fr3_robot.urdf
include/worlds/: fast_world.sdf
launch/: gazebo_joint_position.launch.py  gazebo_joint_position_controller.launch.py  gazebo_simulation.launch.py  joint_position_example_controller.launch.py  mpc_nominal_controller.launch.py  pd_nominal_controller.launch.py  rviz.launch.py  safety_filter.launch.py
src/: HOCBF.py  HOCBF_PID_50Hz copy.py  HOCBF_PID_50Hz.py  analyze_results.py  generate_scenarios.py  joint_position_controller.cpp  joint_position_example_controller.cpp  joint_velocity_controller.cpp  joint_velocity_example_controller.cpp  mpc_nominal_controller.py  pd_nominal_controller.py  rerun_experiments.sh  rerun_list.txt  rerun_simulation.sh  run_all_experiments.sh  run_simulation.sh  safety_filter.py  simulation_HOCBF.py
